# wield-epics-autocas

./: .gitignore  DISTRIBUTION-README.md  LICENSE  MANIFEST.in  NOTICE  TODO.txt  pytest.ini  setup.cfg  setup.py  tox.ini
.githooks/: post-commit
cas9epics/: TODO.txt  __init__.py  cas9core.py  error.py  pcaspy_backend.py  reactor.py  version.py
cas9epics/cas9core/: __init__.py  base_backend.py  cas9core.py  cas9declarative.py  cas9program.py  ctree.py  pcaspy_backend.py  pyepics_backend.py  reactor.py  relay_values.py
cas9epics/config/: nested_dict_utils.py
cas9epics/devices/: IFR2023.py  IFR2026.py  IFRSigGenCommon.py  SRS_SG380.py  SRS_SG382.py  TEK_AFG3000.py  serial_device.py
cas9epics/serial/: VXI11.py  __init__.py  command_response.py  gpib_base.py  prologix_usb_gpib.py  serial_base.py  usb_rs232.py
cas9epics/subservices/: autosave.py  autosave_base.py  cas_time.py  error.py  m1iscfc_burt_180126_132259.snap  program_status.py  restart_on_edit.py
cas9epics/utilities/: __init__.py  modlist.py
docs/: Makefile  advanced.rst  api_fitting.rst  api_toolkit.rst  conf.py  development.rst  index.rst  install.rst  process_variables.rst  quickstart.rst  quickstart_matlab.rst  relay_values.rst  requirements.txt
test/: m1testRVbasic.toml  test.adl  test.py  test2.adl  test2.py  test_BAK.adl  test_autosave.py  test_external.py  test_program.py  test_program.yaml  test_reload.py  test_saver.py  test_savers.adl  test_serial.adl  test_serial.py  test_serial_BAK.adl  test_simple1.py  test_simple1_BAK.adl  test_simple2.py
test/burt/: m1testRVbasic_burt_20180425_195000.snap  m1testRVbasic_burt_20180425_195500.snap  m1testRVbasic_burt_20180425_200000.snap  (+1 more)
(+547 files in other folders)
