# -*- coding: utf-8 -*-
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@caltech.edu>
# NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE

[metadata]
name = wield.epics.autocas
version = 0.4.0.dev0

license = Apache-2.0
license_files = LICENSES/*, NOTICE

author = Lee McCuller
author_email = mcculler@caltech.edu

description = Epics tools to host variables and interface with equipment
long_description = file: README.md
long_description_content_type = text/markdown

url = https://git.ligo.org/wieldphysics/wield-epics-autocas
project_urls =
    Bug Tracker = https://git.ligo.org/wieldphysics/wield-epics-autocas/issues
    Source Code = https://git.ligo.org/wieldphysics/wield-epics-autocas

classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Physics

[options]
setup_requires = 'setuptools>=45.0.0'
install_requires =
    pytest
    wield.bunch
    wield.pytest
    wield.declarative
    pcaspy
    pytoml
    python-vxi11
    gpstime
package_dir =
    =src
packages = find_namespace:

[options.extras_require]
devel = pytest-watch

[options.packages.find]
where = src


[aliases]
test=pytest

[tools.check_versions]
    version_file = src/wield/epics/autocas/_version.py
